--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "sass": "^1.56.1",
     "styled-components": "^5.3.6",
     "modern-normalize": "^1.1.0",    
-    "js-cookie": "^3.0.1"
+    "js-cookie": "^3.0.1",    
+    "react-toastify": "^9.1.1",
+    "react-card-flip": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
