--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
