--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-cookie": "^3.0.1",
     "modern-normalize": "^1.1.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
